Edit: Astro Config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,9 @@
       "@/icons/*": [
         "src/icons/*"
       ],
+      "@/consts/*": [
+        "src/consts/*"
+      ],
       "@/models/*": [
         "src/models/*"
       ],
